[project]
name = "ml-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.format] 
quote-style = "double" 
indent-style = "space"

[tool.ruff.lint] 
select = ["ALL"]